--- a/haskell-euler/stack.yaml
+++ b/haskell-euler/stack.yaml
@@ -64,3 +64,7 @@ packages:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
+
+extra-deps:
+  - git: https://github.com/bradrn/terminal-size
+    commit: 591033712003b58f8c61dba0fc60e95439df9c9b
